# rust_sse

./: Cargo.toml  README.md
assets/: index.html  script.js
src/: main.rs
